--- a/Posto.Web/Views/Login/Index.cshtml
+++ b/Posto.Web/Views/Login/Index.cshtml
@@ -34,8 +34,8 @@
         <div>
             <div>
 
-                <h1 class="logo-name">
-                    <img src="~/images/Logos/Logo Dislub.png" style="width: 300px" />
+                <h1 class="logo-name">                    
+                    <img src="~/images/Logos/oms.png" style="width: 300px"/>
                 </h1>
 
             </div>
