--- a/Posto.Web/Views/Login/Index.cshtml
+++ b/Posto.Web/Views/Login/Index.cshtml
@@ -35,7 +35,7 @@
             <div>
 
                 <h1 class="logo-name">                    
-                    <img src="~/images/Logos/oms.png" style="width: 300px"/>
+                    <img src="~/images/Logos/oms.png" style="width: 300px;margin-bottom: 100px"/>
                 </h1>
 
             </div>
